# fullstack-demo

./: .dockerignore  .editorconfig  .env.in  .gitignore  .prettierrc.json  Brewfile  Justfile  License  ReadMe.md  backend.code-workspace  frontend.code-workspace  fullstack.code-workspace  setup  vs.frontend.code-workspace  vs.fullstack.code-workspace
.devcontainer/: .gitignore  Dockerfile  Procfile  ReadMe.md  compose.common.yaml  compose.discrete.yaml  compose.yaml  devcontainer.json  docker-compose.yml
.devcontainer/_/: compose.procfile.yaml
.devcontainer/_/backend.procfile/: Procfile  compose.yaml  devcontainer.json
.devcontainer/_/frontend.procfile/: Procfile  devcontainer.json
.devcontainer/_/procfile/: compose.yaml  devcontainer.json
.devcontainer/_alt/: ReadMe.md  compose.discrete.yaml  flip
.devcontainer/_alt/backend/: Dockerfile  ReadMe.md  devcontainer.json
.devcontainer/_alt/frontend/: Dockerfile  ReadMe.md  devcontainer.json
.devcontainer/backend/: Dockerfile  Procfile  compose.yaml  devcontainer.json
.devcontainer/frontend/: Dockerfile  Procfile  compose.yaml  devcontainer.json
.devcontainer/fullstack/: Procfile  compose.yaml  devcontainer.json
.devcontainer/services/: compose.yaml  devcontainer.json
backend/: .gitignore  ReadMe.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: pymod.py
backend/src/djapp/: __init__.py  apps.py  tasks.py
backend/src/djproj/: __init__.py  __main__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/src/pypkg/: __init__.py
backend/tests/: __main__.py
fe/: ReadMe.md  next.config.js  package.json  tsconfig.json
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  ReadMe.md  package-lock.json  package.json  tsconfig.json
frontend/.storybook/: main.ts
