[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "some-pypkg"
version = "1.0.0a1"
description = "Placeholder package for testing dev tooling."
authors = [ "Ben Spaulding <ben@spaulding.im>" ]
license = "BSD-3-Clause"
readme = "ReadMe.md"
classifiers = [
	"Private :: Do Not Upload",
]
packages = [
	{ include = "djapp", from = "src" },
	{ include = "djproj", from = "src" },
	{ include = "pymod.py", from = "src" },
	{ include = "pypkg", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
celery = { extras = [ "redis" ], version = "^5.3.1" }
dj-database-url = "^2.0.0"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
ipython = "^8.14.0"
pytest = "^7.4.0"
